fixed hidden group placement issue on mobile

--- a/src/components/pages/portfolio2/Portfolio2.css
+++ b/src/components/pages/portfolio2/Portfolio2.css
@@ -25,7 +25,7 @@
   /* border-style: solid; */
   border-color: white;
   /* position: relative; */
-  position: block;
+  position: relative;
   /* background-color: yellow; */
   flex-grow: 1;
 }
